[project]
name = "quant-common"
version = "0.0.1"
description = "common library for quant"
authors = [
    {name = "dalcon10028", email = "dalcon10280@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "discord-webhook==1.3.0",
    "exceptiongroup==1.2.1",
    "idna==3.7",
    "importlib-resources==5.13.0",
    "iniconfig==2.0.0",
    "packaging==24.0",
    "pluggy==1.5.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "requests==2.31.0",
    "tomli==2.0.1",
    "urllib3==1.26.18",
    "zipp==3.18.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"